Added more to the instructions, changed instruction's format, and made the instructions invisible by default

--- a/mturk/emnlp2019.html
+++ b/mturk/emnlp2019.html
@@ -12,8 +12,15 @@
         integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
 
+<div class="row my-4">
+    <div class="col-12 text-center">
+        <button class='btn btn-info' onclick='document.getElementById("instructions").style.display = "block"; document.getElementById("examples").style.display = "block";'>
+            Click here to show instructions</button>
+    </div>
+</div>
+
 <!-- Instructions -->
-<section class="col-12 my-4" id="instructions">
+<section class="col-12 my-4" id="instructions" style="display: none;">
     <div class="card border-info">
         <div class="card-header bg-info text-white text-center">
             <h5 class="m-0">Instructions</h5>
@@ -21,7 +28,7 @@
         <div class="card-body row">
             <p class="d-block col-12 text-center"><em>Firstly, thanks for
                 participating in our study!</em></p>
-            <div class="col-12 col-md-6">
+            <div class="col-12 col-md-6 offset-md-3">
                 <p><strong>Description: </strong> We have machine-generated (AI)
                     summary sentences of an Article. Each summary sentence pulls from 2 article
                     sentences to create the result you see.</p>
@@ -35,7 +42,8 @@
                     <li class="list-item">
                         Go through each of the <a href="#summaries">Summary Sentences</a>,
                         hover over each to highlight the corresponding
-                        sentences in the article. <strong>Read each summary sentence
+                        sentences in the article. Click on the summary sentence to keep the sentences highlighted.
+                        <strong>Read each summary sentence
                         and answer the following questions:</strong>
                         <ol class="list">
                             <li class="list-item">
@@ -49,16 +57,43 @@
                             </li>
                             <li class="list-item">
                                 <strong>Merging:</strong> How is the summary sentence created?
-                            </li>
+                                
+                                <ul class="list" type="a">
+                                    <li class="list-item">
+                                        <i>Replacement:</i> a pronoun or description of an entity in one sentence is replaced by a different description 
+                                        of that entity in the other sentence.
+                                    </li>
+                                    <li class="list-item">
+                                        <i>Balanced Concatenation:</i> a consecutive part of one sentence is concatenated (linked together side-by-side) 
+                                        with a consecutive part of the other sentence. The parts taken from each sentence are of similar length.
+                                    </li>
+                                    <li class="list-item">
+                                        <i>Imbalanced Concatenation:</i> similar to "Balanced Concatenation," 
+                                        but the part taken from one sentence is larger than the part taken from the other sentence.
+                                    </li>
+                                    <li class="list-item">
+                                        <i>Other:</i> all remaining cases.
+                                    </li>
                             
                         </ol>
                     </li>
                 </ol>
             </div>
-            <div id="divExample" class="col-12 col-md-6">
+        </div>
+    </div>
+</section>
+<section class="col-12 my-4" id="examples" style="display: none;">
+    <div class="card border-info">
+        <div class="card-header bg-info text-white text-center">
+            <h5 class="m-0">Examples</h5>
+        </div>
+        <div class="card-body row border-between">
+            <div id="divExampleLeft" class="col-12 col-md-6">
 
             </div>
-        </div>
+            <div id="divExampleRight" class="col-12 col-md-6">
+
+            </div>
     </div>
 </section>
 <!-- /Instructions -->
@@ -72,7 +107,7 @@
             let p = document.createElement("p");
             p.id = `sent${idx}`;
             p.innerHTML = sent;
-            p.setAttribute("class", "alert py-1 px-2");
+            p.setAttribute("class", "alert py-0 px-2");
             article.appendChild(p);
             idx++;
         })
@@ -87,11 +122,11 @@
 
     yes_html = `<span class="btn btn-sm btn-success">YES</span>`
     no_html = `<span class="btn btn-sm btn-danger">NO</span>`
-    repl_html = `<span class="btn btn-sm btn-info">Repl.</span>`
-    bal_html = `<span class="btn btn-sm btn-secondary">Bal.</span>`
-    imbal_html = `<span class="btn btn-sm btn-primary">Imbal.</span>`
+    repl_html = `<span class="btn btn-sm btn-info">Replacement</span>`
+    bal_html = `<span class="btn btn-sm btn-secondary">Balanced Concatentation</span>`
+    imbal_html = `<span class="btn btn-sm btn-primary">Imbalanced Concatentation</span>`
     other_html = `<span class="btn btn-sm btn-warning">Other</span>`
-    function addExample(articleSents, summarySent, faithful, faithful_exp, contain, contain_exp, grammatical, grammatical_exp, created, created_exp, example_idx) {
+    function addExample(articleSents, summarySent, faithful, faithful_exp, contain, contain_exp, grammatical, grammatical_exp, created, created_exp, example_idx, useLeftPane) {
 
         articleSentsText = ''
         for(var i=0; i<articleSents.length; i++) {
@@ -106,7 +141,8 @@
         contain_html = contain ? yes_html : no_html
         grammatical_html = grammatical ? yes_html : no_html
         created_html = created == 'repl' ? repl_html : created == 'bal' ? bal_html : created == 'imbal' ? imbal_html : created == 'other' ? other_html : 'ERROR'
-        let wrapper = document.getElementById("divExample");
+        divName = useLeftPane ? "divExampleLeft" : "divExampleRight"
+        let wrapper = document.getElementById(divName);
         wrapper.innerHTML = wrapper.innerHTML + `
                 <p class="mb-1"><strong>Article Sentences: </strong>
                 </p>
@@ -220,7 +256,7 @@
         let tasks = document.getElementById("tasks");
 
         let card = document.createElement("div");
-        card.setAttribute("class", "alert summary-sent px-2 py-1 pb-2 my-2");
+        card.setAttribute("class", "alert summary-sent px-2 py-0 my-2");
 
         card.style.backgroundColor = newColor();
         card.id = `summary${idx}`;
@@ -398,7 +434,7 @@
         created = `repl`
         created_exp = `This sentence is created by taking the main idea from Sentence 2 and replacing the entity "kennedy airport" with a 
                             different description of it from Sentence 1: "john f. kennedy international airport."`
-        addExample(articleSents, summarySent, faithful, faithful_exp, contain, contain_exp, grammatical, grammatical_exp, created, created_exp, 0)
+        addExample(articleSents, summarySent, faithful, faithful_exp, contain, contain_exp, grammatical, grammatical_exp, created, created_exp, 0, true)
 
         articleSents = [`(CNN) Kanye West has settled a lawsuit with a paparazzi photographer he assaulted -- and the two have shaken on it.`, 
             `West avoided criminal charges by reaching a civil settlement with the man.`]
@@ -412,7 +448,7 @@
                             English grammar.`
         created = `other`
         created_exp = `Information from each sentence is scattered throughout the summary sentence, which does not fit into either the "Replacement," "Balanced Concatenation,"  or "Imbalanced Concatenation" categories.`
-        addExample(articleSents, summarySent, faithful, faithful_exp, contain, contain_exp, grammatical, grammatical_exp, created, created_exp, 4)
+        addExample(articleSents, summarySent, faithful, faithful_exp, contain, contain_exp, grammatical, grammatical_exp, created, created_exp, 4, true)
 
         articleSents = [`West pleaded no contest last year to a misdemeanor count of battery over the scuffle. `, 
             `A judge sentenced him to two years' probation, as well as anger management sessions and community service.`]
@@ -422,11 +458,11 @@
         contain = true
         contain_exp = `This summary sentence only contains information presented
                             in the highlighted sentences.`
-        grammatical = true
+        grammatical = false
         grammatical_exp = `This sentence is not grammatical, since "a misdemeanor count of battery over the incident" does not make sense after the comma.`
         created = `bal`
         created_exp = `The information comes relatively equally from the two highlighted sentences, and the two blocks of information are linked next to each other, making it "Balanced Concatenation."`
-        addExample(articleSents, summarySent, faithful, faithful_exp, contain, contain_exp, grammatical, grammatical_exp, created, created_exp, 2)
+        addExample(articleSents, summarySent, faithful, faithful_exp, contain, contain_exp, grammatical, grammatical_exp, created, created_exp, 2, false)
 
         articleSents = [`The actor, one of the church of scientology's most high-profile members along with stars like Tom Cruise and Kirstie Alley, is premiering his new film, "the forger," in clearwater, florida.`, 
             `The HBO documentary is based on the book "Going Clear: Scientology, Hollywood, and the Prison of Belief" by Lawrence Wright and is critical of the organization, which has close ties to the showbiz industry.`]
@@ -440,7 +476,7 @@
         grammatical_exp = `This sentence is not grammatical. "One of the church of scientology's new film" is not grammatical.`
         created = `imbal`
         created_exp = `The information comes unequally from the two highlighted sentences, and the two blocks of information are linked next to each other, making it "Imbalanced Concatenation."`
-        addExample(articleSents, summarySent, faithful, faithful_exp, contain, contain_exp, grammatical, grammatical_exp, created, created_exp, 3)
+        addExample(articleSents, summarySent, faithful, faithful_exp, contain, contain_exp, grammatical, grammatical_exp, created, created_exp, 3, false)
     </script>
 </section>
 
@@ -457,6 +493,20 @@
 
     div.summary-sent > div:last-child {
         margin: 0 !important;
+    }
+
+    .border-between > [class*='col-']:before {
+        background: #e3e3e3;
+        bottom: 0;
+        content: " ";
+        left: 0;
+        position: absolute;
+        width: 1px;
+        top: 0;
+    }
+
+    .border-between > [class*='col-']:first-child:before {
+        display: none;
     }
 </style>
 <!-- /Tasks -->
